[gd_scene load_steps=3 format=2]

[ext_resource path="res://Background.png.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = -240.0
margin_right = -500.0
margin_bottom = -170.0

[node name="Timed" type="Button" parent="VBoxContainer"]
margin_right = 920.0
margin_bottom = 20.0
text = "Timed Mode"

[node name="Casual" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 920.0
margin_bottom = 44.0
text = "Casual Mode"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 920.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Timed" to="." method="_on_Timed_pressed"]
[connection signal="pressed" from="VBoxContainer/Casual" to="." method="_on_Casual_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
